# noise-suppression-for-voice

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/common/: CMakeLists.txt
src/juce_plugin/: RnNoiseAudioProcessor.cpp  RnNoiseAudioProcessor.h  RnNoisePluginEditor.cpp  RnNoisePluginEditor.h
src/ladspa_plugin/: RnNoiseLadspaPlugin.h
